--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -35,7 +35,7 @@ color5               #a6d4a6
 color6               #6dc36d
 color7               #dff6df
 
-color8               #3e433e
+color8               #515751
 color9               #4c7a4c
 color10              #7fe07f
 color11              #8cd98c
