--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,7 +1,6 @@
 
-
-exec-once = dunst
-
+$Opacity = 0.9
+$Opacity2 = 0.8
 
 # This is an example Hyprland config file.
 # Refer to the wiki for more information.
@@ -32,6 +31,7 @@ monitor=DP-1,1920x1080@164.83,1920x0,1
 
 exec-once = hyprpaper
 exec-once = waybar
+exec-once = dunst
 
 
 ###################
@@ -42,7 +42,7 @@ exec-once = waybar
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = nautilus
+$fileManager = nemo
 $menu = wofi --show drun
 
 
@@ -93,8 +93,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 7
-    gaps_out = 14
+    gaps_in = 6
+    gaps_out = 12
 
     border_size = 4
 
@@ -117,8 +117,8 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 0.9
-    inactive_opacity = 0.8
+    active_opacity = $Opacity
+    inactive_opacity = $Opacity2
 
     shadow {
         enabled = false
@@ -233,14 +233,22 @@ device {
 ### KEYBINDINGS ###
 ###################
 
-
 bind = SUPER SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy && notify-send "Screenshot Copied!"
-
+bind = SUPER SHIFT, X, exec, grim -g "$(slurp)" - | swappy -f - && notify-send "Screenshot from swappy!"
 
 # See https://wiki.hypr.land/Configuring/KeyworXds/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
+
+
+bind = $mainMod, F,exec, firefox
+
+bind = $mainMod SHIFT, C, exec, ~/.config/hypr/scripts/set-opacity.sh
+bind = $mainMod SHIFT, V, exec, ~/.config/hypr/scripts/lower-opacity.sh
+# bind = $mainMod SHIFT, C, exec, ~/.config/hypr/scripts/toggle-opacity.sh
+
+
 bind = $mainMod, SPACE, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
