--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -243,10 +243,27 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 
 bind = $mainMod, F,exec, firefox
+bind = $mainMod, R,exec, librewolf
+
 
 bind = $mainMod SHIFT, C, exec, ~/.config/hypr/scripts/set-opacity.sh
 bind = $mainMod SHIFT, V, exec, ~/.config/hypr/scripts/lower-opacity.sh
 # bind = $mainMod SHIFT, C, exec, ~/.config/hypr/scripts/toggle-opacity.sh
+
+
+
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
+
+
+
+bind = $mainMod CTRL, right, resizeactive, 26 0
+bind = $mainMod CTRL, left, resizeactive, -26 0
+bind = $mainMod CTRL, up, resizeactive, 0 -26
+bind = $mainMod CTRL, down, resizeactive, 0 26
+
 
 
 bind = $mainMod, SPACE, exec, $terminal
