--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,4 +1,10 @@
 
+
+animations {
+    enabled = 1
+}
+
+
 $Opacity = 0.9
 $Opacity2 = 0.8
 
@@ -32,6 +38,7 @@ monitor=DP-1,1920x1080@164.83,1920x0,1
 exec-once = hyprpaper
 exec-once = waybar
 exec-once = dunst
+exec-once = copyq
 
 
 ###################
@@ -64,8 +71,8 @@ $menu = wofi --show drun
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,23
+env = HYPRCURSOR_SIZE,23
 
 
 ###################
@@ -93,10 +100,10 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 6
-    gaps_out = 12
+    gaps_in = 2
+    gaps_out = 4
 
-    border_size = 4
+    border_size = 0
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(6a8c6aee)
@@ -113,7 +120,7 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 8
+    rounding = 15
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
@@ -130,7 +137,7 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
+        size = 4
         passes = 1
 
         vibrancy = 0.1696
@@ -139,7 +146,7 @@ decoration {
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = 1# yes, please :)
 
     # Default animations, see https://wiki.hypr.land/Configuring/Animations/ for more
 
@@ -217,9 +224,9 @@ input {
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#      workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
@@ -233,11 +240,20 @@ device {
 ### KEYBINDINGS ###
 ###################
 
+# See https://wiki.hypr.land/Configuring/KeyworXds/
+$mainMod = SUPER # Sets "Windows" key as main modifier
+
+
+
+
+
+bind = $mainMod, V, exec, copyq toggle
+
+
 bind = SUPER SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy && notify-send "Screenshot Copied!"
 bind = SUPER SHIFT, X, exec, grim -g "$(slurp)" - | swappy -f - && notify-send "Screenshot from swappy!"
 
-# See https://wiki.hypr.land/Configuring/KeyworXds/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 
@@ -249,6 +265,8 @@ bind = $mainMod, R,exec, librewolf
 bind = $mainMod SHIFT, C, exec, ~/.config/hypr/scripts/set-opacity.sh
 bind = $mainMod SHIFT, V, exec, ~/.config/hypr/scripts/lower-opacity.sh
 # bind = $mainMod SHIFT, C, exec, ~/.config/hypr/scripts/toggle-opacity.sh
+
+
 
 
 
